html page resto

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						<img src="Maquettes Ohmyfood/Maquettes Ohmyfood/images/restaurants/a-la-francaise.jpg" alt="Plat du restaurant">
 					</div>
 					<div class="restotxt">
-						<h2>A la française</h2>
+						<h2>À la française</h2>
 						<p>Cité Rouge</p>
 					</div>
 					<div class="coeur">
