--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<header>
 			<div class="hlogo">
-				<img src="Maquettes Ohmyfood/Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood">
+				<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood">
 			</div>
 		</header>
 		<div class="localisation">
@@ -50,7 +50,7 @@
 			<div class="restaurant">
 				<a href="page-palette.html">
 					<div class="restoimg">
-						<img src="Maquettes Ohmyfood/Maquettes Ohmyfood/images/restaurants/la-palette-du-gout.jpg" alt="Plat du restaurant">
+						<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/la-palette-du-gout.jpg" alt="Plat du restaurant">
 						<p class="new">Nouveau</p>
 					</div>
 					<div class="restotxt">
@@ -64,7 +64,7 @@
 				</a>
 				<a href="page-note.html">
 					<div class="restoimg">
-						<img src="Maquettes Ohmyfood/Maquettes Ohmyfood/images/restaurants/la-note-enchantee.jpg" alt="Plat du restaurant">
+						<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/la-note-enchantee.jpg" alt="Plat du restaurant">
 						<p class="new">Nouveau</p>
 					</div>
 					<div class="restotxt">
@@ -78,7 +78,7 @@
 				</a>
 				<a href="page-fr.html">
 					<div class="restoimg">
-						<img src="Maquettes Ohmyfood/Maquettes Ohmyfood/images/restaurants/a-la-francaise.jpg" alt="Plat du restaurant">
+						<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/a-la-francaise.jpg" alt="Plat du restaurant">
 					</div>
 					<div class="restotxt">
 						<h2>À la française</h2>
@@ -91,7 +91,7 @@
 				</a>
 				<a href="page-sens.html">
 					<div class="restoimg">
-						<img src="Maquettes Ohmyfood/Maquettes Ohmyfood/images/restaurants/le-delice-des-sens.jpg" alt="Plat du restaurant">
+						<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/le-delice-des-sens.jpg" alt="Plat du restaurant">
 					</div>
 					<div class="restotxt">
 						<h2>Le délice des sens</h2>
@@ -106,7 +106,7 @@
 		</section>
 		<footer>
 			<div class="flogo">
-				<img src="Maquettes Ohmyfood/Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood">
+				<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood">
 			</div>
 			<div class="flien">			
 				<a href="#">
