--- a/page-note.html
+++ b/page-note.html
@@ -14,11 +14,11 @@
                 <a href="index.html">
                     <i class="fas fa-arrow-left"></i>
                 </a>
-				<img src="Maquettes Ohmyfood/Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood">
+				<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood">
 			</div>
 		</header>
         <div>
-            <img src="Maquettes Ohmyfood/Maquettes Ohmyfood/images/restaurants/la-note-enchantee.jpg" alt="Plat du restaurant">
+            <img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/la-note-enchantee.jpg" alt="Plat du restaurant">
         </div>
 		<section class="titre">
             <div>
@@ -163,7 +163,7 @@
         </div>
 		<footer>
 			<div class="flogo">
-				<img src="Maquettes Ohmyfood/Maquettes Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood">
+				<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood">
 			</div>
 			<div class="flien">			
 				<a href="#">
