--- a/page-fr.html
+++ b/page-fr.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href=".css">
+		<link rel="stylesheet" href="P3-style.css">
 		<script src="https://kit.fontawesome.com/f7f5030a1d.js" crossorigin="anonymous"></script>
 		<title>Ohmyfood - À la française</title>
 	</head>
