--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div>
 				<p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
 			</div>
-			<div>
+			<div class="bexploration">
 				<a href="#ancre-restaurant">Explorer nos restaurants</a>
 			</div>
 		</section>
