--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="P3-style.css">
+		<link rel="stylesheet" href="P3-style-index.css">
 		<script src="https://kit.fontawesome.com/f7f5030a1d.js" crossorigin="anonymous"></script>
 		<title>Ohmyfood</title>
 	</head>
@@ -120,7 +120,7 @@
 				<a href="#">
 					<p>Mentions légales</p>
 				</a>
-				<a href="#">
+				<a href="mailto:contact@ohmyfood.fr">
 					<p>Contact</p>
 				</a>
 			</div>
