--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<i class="fas fa-list-ul"></i>
 				<p>Composez votre menu</p>
 			</div>
-			<div class="F3">
+			<div class="F3 F3--purple">
 				<p class="num">3</p>
 				<i class="fas fa-store"></i>
 				<p>Dégustez au restaurant</p>
