--- a/page-note.html
+++ b/page-note.html
@@ -177,7 +177,7 @@
 				<a href="#">
 					<p>Mentions légales</p>
 				</a>
-				<a href="#">
+				<a href="mailto:contact@ohmyfood.fr">
 					<p>Contact</p>
 				</a>
 			</div>
