--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
 			<div class="F1">
 				<p class="num">1</p>
 				<i class="fas fa-mobile-alt"></i>
-				<p>Choisissez un restaurant</p>
+				<p><strong>Choisissez un restaurant</strong></p>
 			</div>
 			<div class="F2">
 				<p class="num">2</p>
 				<i class="fas fa-list-ul"></i>
-				<p>Composez votre menu</p>
+				<p><strong>Composez votre menu</strong></p>
 			</div>
-			<div class="F3 F3--purple">
+			<div class="F3">
 				<p class="num">3</p>
 				<i class="fas fa-store"></i>
-				<p>Dégustez au restaurant</p>
+				<p><strong>Dégustez au restaurant</strong></p>
 			</div>
 		</section>
 		<section id="ancre-restaurant">
@@ -111,11 +111,11 @@
 			<div class="flien">			
 				<a href="#">
 					<i class="fas fa-utensils"></i>
-					<p>Proposer un restaurant</p>
+					<p><strong>Proposer un restaurant</strong></p>
 				</a>
 				<a href="#">
 					<i class="fas fa-hands-helping"></i>
-					<p>Devenir partenaire</p>
+					<p><strong>Devenir partenaire</strong></p>
 				</a>
 				<a href="#">
 					<p>Mentions légales</p>
