--- a/index.html
+++ b/index.html
@@ -29,20 +29,22 @@
 		</section>
 		<section class="fonctionnement">
 			<h1>Fonctionnement</h1>
-			<div class="F1">
-				<p class="num">1</p>
-				<i class="fas fa-mobile-alt"></i>
-				<p><strong>Choisissez un restaurant</strong></p>
-			</div>
-			<div class="F2">
-				<p class="num">2</p>
-				<i class="fas fa-list-ul"></i>
-				<p><strong>Composez votre menu</strong></p>
-			</div>
-			<div class="F3">
-				<p class="num">3</p>
-				<i class="fas fa-store"></i>
-				<p><strong>Dégustez au restaurant</strong></p>
+			<div class="Fbox">			
+				<div class="F1">
+					<p class="num">1</p>
+					<i class="fas fa-mobile-alt"></i>
+					<p><strong>Choisissez un restaurant</strong></p>
+				</div>
+				<div class="F2">
+					<p class="num">2</p>
+					<i class="fas fa-list-ul"></i>
+					<p><strong>Composez votre menu</strong></p>
+				</div>
+				<div class="F3">
+					<p class="num">3</p>
+					<i class="fas fa-store"></i>
+					<p><strong>Dégustez au restaurant</strong></p>
+				</div>
 			</div>
 		</section>
 		<section id="ancre-restaurant">
