--- a/index.html
+++ b/index.html
@@ -55,13 +55,15 @@
 						<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/la-palette-du-gout.jpg" alt="Plat du restaurant">
 						<p class="new">Nouveau</p>
 					</div>
-					<div class="restotxt">
-						<h2>La palette du goût</h2>
-						<p>Ménilmontant</p>
-					</div>
-					<div class="coeur">
-						<i class="far fa-heart"></i> <!-- coeur vide --> 
-						<i class="fas fa-heart"></i> <!-- coeur plein -->
+					<div class="blocrestotxt">
+						<div class="restotxt">
+							<h2>La palette du goût</h2>
+							<p>Ménilmontant</p>
+						</div>
+						<div class="coeur">
+							<i class="far fa-heart"></i> <!-- coeur vide --> 
+							<i class="fas fa-heart"></i> <!-- coeur plein -->
+						</div>
 					</div>
 				</a>
 				<a href="page-note.html">
@@ -69,39 +71,45 @@
 						<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/la-note-enchantee.jpg" alt="Plat du restaurant">
 						<p class="new">Nouveau</p>
 					</div>
-					<div class="restotxt">
-						<h2>La note enchantée</h2>
-						<p>Charonne</p>
-					</div>
-					<div class="coeur">
-						<i class="far fa-heart"></i> <!-- coeur vide --> 
-						<i class="fas fa-heart"></i> <!-- coeur plein -->
+					<div class="blocrestotxt">
+						<div class="restotxt">
+							<h2>La note enchantée</h2>
+							<p>Charonne</p>
+						</div>
+						<div class="coeur">
+							<i class="far fa-heart"></i> <!-- coeur vide --> 
+							<i class="fas fa-heart"></i> <!-- coeur plein -->
+						</div>
 					</div>
 				</a>
 				<a href="page-fr.html">
 					<div class="restoimg">
 						<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/a-la-francaise.jpg" alt="Plat du restaurant">
 					</div>
-					<div class="restotxt">
-						<h2>À la française</h2>
-						<p>Cité Rouge</p>
-					</div>
-					<div class="coeur">
-						<i class="far fa-heart"></i> <!-- coeur vide --> 
-						<i class="fas fa-heart"></i> <!-- coeur plein -->
+					<div class="blocrestotxt">
+						<div class="restotxt">
+							<h2>À la française</h2>
+							<p>Cité Rouge</p>
+						</div>
+						<div class="coeur">
+							<i class="far fa-heart"></i> <!-- coeur vide --> 
+							<i class="fas fa-heart"></i> <!-- coeur plein -->
+						</div>
 					</div>
 				</a>
 				<a href="page-sens.html">
 					<div class="restoimg">
 						<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/le-delice-des-sens.jpg" alt="Plat du restaurant">
 					</div>
-					<div class="restotxt">
-						<h2>Le délice des sens</h2>
-						<p>Folie-Méricourt</p>
-					</div>
-					<div class="coeur">
-						<i class="far fa-heart"></i> <!-- coeur vide --> 
-						<i class="fas fa-heart"></i> <!-- coeur plein -->
+					<div class="blocrestotxt">
+						<div class="restotxt">
+							<h2>Le délice des sens</h2>
+							<p>Folie-Méricourt</p>
+						</div>
+						<div class="coeur">
+							<i class="far fa-heart"></i> <!-- coeur vide --> 
+							<i class="fas fa-heart"></i> <!-- coeur plein -->
+						</div>
 					</div>
 				</a>
 			</div>
