--- a/page-palette.html
+++ b/page-palette.html
@@ -17,7 +17,7 @@
 				<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood">
 			</div>
 		</header>
-        <div>
+        <div class="imgfond">
             <img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/la-palette-du-gout.jpg" alt="Plat du restaurant">
         </div>
 		<section class="titre">
