--- a/page-palette.html
+++ b/page-palette.html
@@ -20,134 +20,136 @@
         <div class="imgfond">
             <img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/la-palette-du-gout.jpg" alt="Plat du restaurant">
         </div>
-		<section class="titre">
+        <div class="corps">
+            <section class="titre">
+                <div>
+                    <h3>La palette du goût</h3>
+                    <div class="coeur">
+                        <i class="far fa-heart"></i> <!-- coeur vide --> 
+                        <i class="fas fa-heart"></i> <!-- coeur plein -->
+                    </div>
+                </div>
+            </section>
+            <section class="entrees">
+                <h4>ENTRÉES</h4>
+                <div class="menu">
+                    <div class="txtmenu">
+                        <h5>Fricassée d'escargot</h5>
+                        <p>Au piment d'espelette</p>
+                    </div>
+                    <div class="prix">
+                        <p><strong>25€</strong></p>
+                    </div>
+                    <div class="selection">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+                <div class="menu">
+                    <div class="txtmenu">
+                        <h5>Foie gras de canard mi-cuit</h5>
+                        <p>Et ses copeaux de truffe noire</p>
+                    </div>
+                    <div class="prix">
+                        <p><strong>35€</strong></p>
+                    </div>
+                    <div class="selection">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+                <div class="menu">
+                    <div class="txtmenu">
+                        <h5>Oeuf au plat</h5>
+                        <p>Assaisonné à la truffe sur lit de caviar</p>
+                    </div>
+                    <div class="prix">
+                        <p><strong>20€</strong></p>
+                    </div>
+                    <div class="selection">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+            </section>
+            <section class="plats">
+                <h4>PLATS</h4>
+                <div class="menu">
+                    <div class="txtmenu">
+                        <h5>Filet de boeuf aux herbes</h5>
+                        <p>Accompagné de sa ribambelle de légumes</p>
+                    </div>
+                    <div class="prix">
+                        <p><strong>40€</strong></p>
+                    </div>
+                    <div class="selection">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+                <div class="menu">
+                    <div class="txtmenu">
+                        <h5>Parmentier de queue de boeuf</h5>
+                        <p>À la truffe noire sur sa purée de panais</p>
+                    </div>
+                    <div class="prix">
+                        <p><strong>35€</strong></p>
+                    </div>
+                    <div class="selection">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+                <div class="menu">
+                    <div class="txtmenu">
+                        <h5>Filet de turbot</h5>
+                        <p>Aux agrumes</p>
+                    </div>
+                    <div class="prix">
+                        <p><strong>44€</strong></p>
+                    </div>
+                    <div class="selection">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+            </section>
+            <section class="desserts">
+                <h4>DESSERTS</h4>
+                <div class="menu">
+                    <div class="txtmenu">
+                        <h5>Paris-Brest</h5>
+                        <p>Revisité</p>
+                    </div>
+                    <div class="prix">
+                        <p><strong>18€</strong></p>
+                    </div>
+                    <div class="selection">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+                <div class="menu">
+                    <div class="txtmenu">
+                        <h5>Macaron au chocolat d'exception</h5>
+                        <p>Et glace à la vanille de Madagascar</p>
+                    </div>
+                    <div class="prix">
+                        <p><strong>22€</strong></p>
+                    </div>
+                    <div class="selection">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+                <div class="menu">
+                    <div class="txtmenu">
+                        <h5>Mousse au chocolat</h5>
+                        <p>Au piment d'Espelette et à la truffe noire</p>
+                    </div>
+                    <div class="prix">
+                        <p><strong>23€</strong></p>
+                    </div>
+                    <div class="selection">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+                </div>
+            </section>
             <div>
-                <h3>La palette du goût</h3>
-                <div class="coeur">
-                    <i class="far fa-heart"></i> <!-- coeur vide --> 
-                    <i class="fas fa-heart"></i> <!-- coeur plein -->
-                </div>
+                <button>Commander</button>
             </div>
-        </section>
-		<section class="entrees">
-            <h4>ENTRÉES</h4>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Fricassée d'escargot</h5>
-                    <p>Au piment d'espelette</p>
-                </div>
-                <div class="prix">
-                    <p><strong>25€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Foie gras de canard mi-cuit</h5>
-                    <p>Et ses copeaux de truffe noire</p>
-                </div>
-                <div class="prix">
-                    <p><strong>35€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Oeuf au plat</h5>
-                    <p>Assaisonné à la truffe sur lit de caviar</p>
-                </div>
-                <div class="prix">
-                    <p><strong>20€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-        </section>
-        <section class="plats">
-            <h4>PLATS</h4>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Filet de boeuf aux herbes</h5>
-                    <p>Accompagné de sa ribambelle de légumes</p>
-                </div>
-                <div class="prix">
-                    <p><strong>40€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Parmentier de queue de boeuf</h5>
-                    <p>À la truffe noire sur sa purée de panais</p>
-                </div>
-                <div class="prix">
-                    <p><strong>35€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Filet de turbot</h5>
-                    <p>Aux agrumes</p>
-                </div>
-                <div class="prix">
-                    <p><strong>44€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-        </section>
-        <section class="desserts">
-            <h4>DESSERTS</h4>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Paris-Brest</h5>
-                    <p>Revisité</p>
-                </div>
-                <div class="prix">
-                    <p><strong>18€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Macaron au chocolat d'exception</h5>
-                    <p>Et glace à la vanille de Madagascar</p>
-                </div>
-                <div class="prix">
-                    <p><strong>22€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Mousse au chocolat</h5>
-                    <p>Au piment d'Espelette et à la truffe noire</p>
-                </div>
-                <div class="prix">
-                    <p><strong>23€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-        </section>
-        <div>
-            <button>Commander</button>
         </div>
 		<footer>
 			<div class="flogo">
