--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		</section>
 		<footer>
 			<div class="flogo">
-				<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood">
+                <p>Ohmyfood</p>
 			</div>
 			<div class="flien">			
 				<a href="#">
