maj footer et btn

--- a/page-note.html
+++ b/page-note.html
@@ -163,7 +163,7 @@
         </div>
 		<footer>
 			<div class="flogo">
-				<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood">
+                <p>Ohmyfood</p>
 			</div>
 			<div class="flien">			
 				<a href="#">
