--- a/page-palette.html
+++ b/page-palette.html
@@ -148,8 +148,8 @@
                         </div>
                     </div>
                 </section>
-                <div>
-                    <button>Commander</button>
+                <div class="button">
+                    <a href="#">Commander</a>
                 </div>
             </div>
         </div>
