--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 
 	<body>
+		<div class="loader"></div>
 		<header>
 			<div class="hlogo">
 				<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood">
