--- a/index.html
+++ b/index.html
@@ -10,131 +10,129 @@
 
 	<body>
 		<div class="loader"></div>
-		<header>
-			<div class="hlogo">
-				<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood">
+		<div class="acceuil">
+			<header>
+				<div class="hlogo">
+					<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood">
+				</div>
+			</header>
+			<div class="localisation">
+				<i class="fas fa-map-marker-alt"></i>
+				<p>Paris, Belleville</p>
 			</div>
-		</header>
-		<div class="localisation">
-			<i class="fas fa-map-marker-alt"></i>
-			<p>Paris, Belleville</p>
+			<section class="explication">
+				<h1>Réservez le menu qui vous convient</h1>
+				<div>
+					<p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+				</div>
+				<div class="bexploration">
+					<a href="#ancre-restaurant">Explorer nos restaurants</a>
+				</div>
+			</section>
+			<section class="fonctionnement">
+				<h1>Fonctionnement</h1>
+				<div class="Fbox">			
+					<div class="F1">
+						<p class="num">1</p>
+						<i class="fas fa-mobile-alt"></i>
+						<p><strong>Choisissez un restaurant</strong></p>
+					</div>
+					<div class="F2">
+						<p class="num">2</p>
+						<i class="fas fa-list-ul"></i>
+						<p><strong>Composez votre menu</strong></p>
+					</div>
+					<div class="F3">
+						<p class="num">3</p>
+						<i class="fas fa-store"></i>
+						<p><strong>Dégustez au restaurant</strong></p>
+					</div>
+				</div>
+			</section>
+			<section id="ancre-restaurant">
+				<h1>Restaurants</h1>
+				<div class="restaurant">
+					<a href="page-palette.html">
+						<div class="restoimg">
+							<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/la-palette-du-gout.jpg" alt="Plat du restaurant">
+							<p class="new">Nouveau</p>
+						</div>
+						<div class="blocrestotxt">
+							<div class="restotxt">
+								<h2>La palette du goût</h2>
+								<p>Ménilmontant</p>
+							</div>
+							<div class="coeur">
+								<i class="far fa-heart"></i> <!-- coeur vide --> 
+							</div>
+						</div>
+					</a>
+					<a href="page-note.html">
+						<div class="restoimg">
+							<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/la-note-enchantee.jpg" alt="Plat du restaurant">
+							<p class="new">Nouveau</p>
+						</div>
+						<div class="blocrestotxt">
+							<div class="restotxt">
+								<h2>La note enchantée</h2>
+								<p>Charonne</p>
+							</div>
+							<div class="coeur">
+								<i class="far fa-heart"></i> <!-- coeur vide --> 
+							</div>
+						</div>
+					</a>
+					<a href="page-fr.html">
+						<div class="restoimg">
+							<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/a-la-francaise.jpg" alt="Plat du restaurant">
+						</div>
+						<div class="blocrestotxt">
+							<div class="restotxt">
+								<h2>À la française</h2>
+								<p>Cité Rouge</p>
+							</div>
+							<div class="coeur">
+								<i class="far fa-heart"></i> <!-- coeur vide --> 
+							</div>
+						</div>
+					</a>
+					<a href="page-sens.html">
+						<div class="restoimg">
+							<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/le-delice-des-sens.jpg" alt="Plat du restaurant">
+						</div>
+						<div class="blocrestotxt">
+							<div class="restotxt">
+								<h2>Le délice des sens</h2>
+								<p>Folie-Méricourt</p>
+							</div>
+							<div class="coeur">
+								<i class="far fa-heart"></i> <!-- coeur vide --> 
+							</div>
+						</div>
+					</a>
+				</div>
+			</section>
+			<footer>
+				<div class="flogo">
+					<p>Ohmyfood</p>
+				</div>
+				<div class="flien">
+					<a href="#">
+						<i class="fas fa-utensils"></i>
+						<p><strong>Proposer un restaurant</strong></p>
+					</a>
+					<a href="#">
+						<i class="fas fa-hands-helping"></i>
+						<p><strong>Devenir partenaire</strong></p>
+					</a>
+					<a href="#">
+						<p>Mentions légales</p>
+					</a>
+					<a href="mailto:contact@ohmyfood.fr">
+						<p>Contact</p>
+					</a>
+				</div>
+			</footer>
 		</div>
-		<section class="explication">
-			<h1>Réservez le menu qui vous convient</h1>
-			<div>
-				<p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-			</div>
-			<div class="bexploration">
-				<a href="#ancre-restaurant">Explorer nos restaurants</a>
-			</div>
-		</section>
-		<section class="fonctionnement">
-			<h1>Fonctionnement</h1>
-			<div class="Fbox">			
-				<div class="F1">
-					<p class="num">1</p>
-					<i class="fas fa-mobile-alt"></i>
-					<p><strong>Choisissez un restaurant</strong></p>
-				</div>
-				<div class="F2">
-					<p class="num">2</p>
-					<i class="fas fa-list-ul"></i>
-					<p><strong>Composez votre menu</strong></p>
-				</div>
-				<div class="F3">
-					<p class="num">3</p>
-					<i class="fas fa-store"></i>
-					<p><strong>Dégustez au restaurant</strong></p>
-				</div>
-			</div>
-		</section>
-		<section id="ancre-restaurant">
-			<h1>Restaurants</h1>
-			<div class="restaurant">
-				<a href="page-palette.html">
-					<div class="restoimg">
-						<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/la-palette-du-gout.jpg" alt="Plat du restaurant">
-						<p class="new">Nouveau</p>
-					</div>
-					<div class="blocrestotxt">
-						<div class="restotxt">
-							<h2>La palette du goût</h2>
-							<p>Ménilmontant</p>
-						</div>
-						<div class="coeur">
-							<i class="far fa-heart"></i> <!-- coeur vide --> 
-							<i class="fas fa-heart"></i> <!-- coeur plein -->
-						</div>
-					</div>
-				</a>
-				<a href="page-note.html">
-					<div class="restoimg">
-						<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/la-note-enchantee.jpg" alt="Plat du restaurant">
-						<p class="new">Nouveau</p>
-					</div>
-					<div class="blocrestotxt">
-						<div class="restotxt">
-							<h2>La note enchantée</h2>
-							<p>Charonne</p>
-						</div>
-						<div class="coeur">
-							<i class="far fa-heart"></i> <!-- coeur vide --> 
-							<i class="fas fa-heart"></i> <!-- coeur plein -->
-						</div>
-					</div>
-				</a>
-				<a href="page-fr.html">
-					<div class="restoimg">
-						<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/a-la-francaise.jpg" alt="Plat du restaurant">
-					</div>
-					<div class="blocrestotxt">
-						<div class="restotxt">
-							<h2>À la française</h2>
-							<p>Cité Rouge</p>
-						</div>
-						<div class="coeur">
-							<i class="far fa-heart"></i> <!-- coeur vide --> 
-							<i class="fas fa-heart"></i> <!-- coeur plein -->
-						</div>
-					</div>
-				</a>
-				<a href="page-sens.html">
-					<div class="restoimg">
-						<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/le-delice-des-sens.jpg" alt="Plat du restaurant">
-					</div>
-					<div class="blocrestotxt">
-						<div class="restotxt">
-							<h2>Le délice des sens</h2>
-							<p>Folie-Méricourt</p>
-						</div>
-						<div class="coeur">
-							<i class="far fa-heart"></i> <!-- coeur vide --> 
-							<i class="fas fa-heart"></i> <!-- coeur plein -->
-						</div>
-					</div>
-				</a>
-			</div>
-		</section>
-		<footer>
-			<div class="flogo">
-                <p>Ohmyfood</p>
-			</div>
-			<div class="flien">
-				<a href="#">
-					<i class="fas fa-utensils"></i>
-					<p><strong>Proposer un restaurant</strong></p>
-				</a>
-				<a href="#">
-					<i class="fas fa-hands-helping"></i>
-					<p><strong>Devenir partenaire</strong></p>
-				</a>
-				<a href="#">
-					<p>Mentions légales</p>
-				</a>
-				<a href="mailto:contact@ohmyfood.fr">
-					<p>Contact</p>
-				</a>
-			</div>
-		</footer>
 	</body>
 </html>
