--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 	</head>
 
 	<body>
-		<div class="loader"></div>
+		<div class="loadercache">
+			<div class="loader"></div>
+		</div>
 		<div class="acceuil">
 			<header>
 				<div class="hlogo">
