--- a/page-note.html
+++ b/page-note.html
@@ -17,148 +17,152 @@
 				<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood">
 			</div>
 		</header>
-        <div class="imgfond">
-            <img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/la-note-enchantee.jpg" alt="Plat du restaurant">
-        </div>
-		<section class="titre">
-            <div>
-                <h3>La note enchantée</h3>
-                <div class="coeur">
-                    <i class="far fa-heart"></i> <!-- coeur vide --> 
+        <div class="corps">
+            <div class="imgfond">
+                <img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/la-note-enchantee.jpg" alt="Plat du restaurant">
+            </div>
+            <div class="corpsmenu">
+                <section class="titre">
+                    <div>
+                        <h3>La note enchantée</h3>
+                        <div class="coeur">
+                            <i class="far fa-heart"></i> <!-- coeur vide --> 
+                        </div>
+                    </div>
+                </section>
+                <section class="entrees">
+                    <h4>ENTRÉES</h4>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Ravioles de foie gras</h5>
+                            <p>Accompagnés de leur crème à la truffe</p>
+                        </div>
+                        <div class="prix">
+                            <p>25€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Caviar osciètre</h5>
+                            <p>Sur blini à la farine de blé noir</p>
+                        </div>
+                        <div class="prix">
+                            <p>35€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Homard et espuma de potiron</h5>
+                            <p>Mariné aux zestes d'orange</p>
+                        </div>
+                        <div class="prix">
+                            <p>20€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Foie gras de canard cuit entier</h5>
+                            <p>Confiture de figue et pain toasté</p>
+                        </div>
+                        <div class="prix">
+                            <p>35€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="plats">
+                    <h4>PLATS</h4>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Noix de coquilles Saint-Jacques</h5>
+                            <p>Sur lit de purée de céleri-rave</p>
+                        </div>
+                        <div class="prix">
+                            <p>40€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Langoustine poêlée</h5>
+                            <p>Purée de patate douce</p>
+                        </div>
+                        <div class="prix">
+                            <p>35€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Mijoté de queue de boeuf</h5>
+                            <p>Et riz sauvage aux zestes de citron</p>
+                        </div>
+                        <div class="prix">
+                            <p>44€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="desserts">
+                    <h4>DESSERTS</h4>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Macaron noisette et chocolat</h5>
+                            <p>Glace au caramel brun et sel de Guérande</p>
+                        </div>
+                        <div class="prix">
+                            <p>18€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Baba au rhum revisité</h5>
+                            <p>Avec son coulis de citron</p>
+                        </div>
+                        <div class="prix">
+                            <p>22€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Tarte au citron meringuée</h5>
+                            <p>Déstructurée</p>
+                        </div>
+                        <div class="prix">
+                            <p>23€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <div class="button">
+                    <a href="#">Commander</a>
                 </div>
             </div>
-        </section>
-		<section class="entrees">
-            <h4>ENTRÉES</h4>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Ravioles de foie gras</h5>
-                    <p>Accompagnés de leur crème à la truffe</p>
-                </div>
-                <div class="prix">
-                    <p><strong>25€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Caviar osciètre</h5>
-                    <p>Sur blini à la farine de blé noir</p>
-                </div>
-                <div class="prix">
-                    <p><strong>35€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Homard et espuma de potiron</h5>
-                    <p>Mariné aux zestes d'orange</p>
-                </div>
-                <div class="prix">
-                    <p><strong>20€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Foie gras de canard cuit entier</h5>
-                    <p>Confiture de figue et pain toasté</p>
-                </div>
-                <div class="prix">
-                    <p><strong>35€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-        </section>
-        <section class="plats">
-            <h4>PLATS</h4>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Noix de coquilles Saint-Jacques</h5>
-                    <p>Sur lit de purée de céleri-rave</p>
-                </div>
-                <div class="prix">
-                    <p><strong>40€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Langoustine poêlée</h5>
-                    <p>Purée de patate douce</p>
-                </div>
-                <div class="prix">
-                    <p><strong>35€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Mijoté de queue de boeuf</h5>
-                    <p>Et riz sauvage aux zestes de citron</p>
-                </div>
-                <div class="prix">
-                    <p><strong>44€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-        </section>
-        <section class="desserts">
-            <h4>DESSERTS</h4>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Macaron noisette et chocolat</h5>
-                    <p>Glace au caramel brun et sel de Guérande</p>
-                </div>
-                <div class="prix">
-                    <p><strong>18€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Baba au rhum revisité</h5>
-                    <p>Avec son coulis de citron</p>
-                </div>
-                <div class="prix">
-                    <p><strong>22€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Tarte au citron meringuée</h5>
-                    <p>Déstructurée</p>
-                </div>
-                <div class="prix">
-                    <p><strong>23€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-        </section>
-        <div>
-            <button>Commander</button>
         </div>
 		<footer>
 			<div class="flogo">
