--- a/page-fr.html
+++ b/page-fr.html
@@ -17,136 +17,140 @@
 				<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood">
 			</div>
 		</header>
-        <div class="imgfond">
-            <img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/a-la-francaise.jpg" alt="Plat du restaurant">
-        </div>
-		<section class="titre">
-            <div>
-                <h3>À la française</h3>
-                <div class="coeur">
-                    <i class="far fa-heart"></i> <!-- coeur vide --> 
+        <div class="corps">
+            <div class="imgfond">
+                <img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/a-la-francaise.jpg" alt="Plat du restaurant">
+            </div>
+            <div class="corpsmenu">
+                <section class="titre">
+                    <div>
+                        <h3>À la française</h3>
+                        <div class="coeur">
+                            <i class="far fa-heart"></i> <!-- coeur vide --> 
+                        </div>
+                    </div>
+                </section>
+                <section class="entrees">
+                    <h4>ENTRÉES</h4>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Tartare de poulpe acidulé</h5>
+                            <p>Aux zestes d'orange</p>
+                        </div>
+                        <div class="prix">
+                            <p>25€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Velouté de légumes d'antan</h5>
+                            <p>Carotte, panais, topinambour</p>
+                        </div>
+                        <div class="prix">
+                            <p>35€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Soupe à l'oignon</h5>
+                            <p>Revisitée</p>
+                        </div>
+                        <div class="prix">
+                            <p>20€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="plats">
+                    <h4>PLATS</h4>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Coquilles Saint-Jacques</h5>
+                            <p>Accompagnées d'une purée de panais</p>
+                        </div>
+                        <div class="prix">
+                            <p>40€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Magret de canard</h5>
+                            <p>Et parmentier de pommes de terre</p>
+                        </div>
+                        <div class="prix">
+                            <p>35€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Pigeonneau d’Ille-et-Vilaine</h5>
+                            <p>Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <div class="prix">
+                            <p>44€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="desserts">
+                    <h4>DESSERTS</h4>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Pétales de violettes glacés</h5>
+                            <p>Et purée de noisettes</p>
+                        </div>
+                        <div class="prix">
+                            <p>18€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Fondant au chocolat</h5>
+                            <p>Revisité</p>
+                        </div>
+                        <div class="prix">
+                            <p>22€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Millefeuille croustillant</h5>
+                            <p>Myrtilles et pâte d’amande</p>
+                        </div>
+                        <div class="prix">
+                            <p>23€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <div class="button">
+                    <a href="#">Commander</a>
                 </div>
             </div>
-        </section>
-		<section class="entrees">
-            <h4>ENTRÉES</h4>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Tartare de poulpe acidulé</h5>
-                    <p>Aux zestes d'orange</p>
-                </div>
-                <div class="prix">
-                    <p><strong>25€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Velouté de légumes d'antan</h5>
-                    <p>Carotte, panais, topinambour</p>
-                </div>
-                <div class="prix">
-                    <p><strong>35€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Soupe à l'oignon</h5>
-                    <p>Revisitée</p>
-                </div>
-                <div class="prix">
-                    <p><strong>20€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-        </section>
-        <section class="plats">
-            <h4>PLATS</h4>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Coquilles Saint-Jacques</h5>
-                    <p>Accompagnées d'une purée de panais</p>
-                </div>
-                <div class="prix">
-                    <p><strong>40€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Magret de canard</h5>
-                    <p>Et parmentier de pommes de terre</p>
-                </div>
-                <div class="prix">
-                    <p><strong>35€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Pigeonneau d’Ille-et-Vilaine</h5>
-                    <p>Sur son lit de gnocchis aux légumes</p>
-                </div>
-                <div class="prix">
-                    <p><strong>44€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-        </section>
-        <section class="desserts">
-            <h4>DESSERTS</h4>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Pétales de violettes glacés</h5>
-                    <p>Et purée de noisettes</p>
-                </div>
-                <div class="prix">
-                    <p><strong>18€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Fondant au chocolat</h5>
-                    <p>Revisité</p>
-                </div>
-                <div class="prix">
-                    <p><strong>22€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Millefeuille croustillant</h5>
-                    <p>Myrtilles et pâte d’amande</p>
-                </div>
-                <div class="prix">
-                    <p><strong>23€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-        </section>
-        <div>
-            <button>Commander</button>
         </div>
 		<footer>
 			<div class="flogo">
