--- a/page-sens.html
+++ b/page-sens.html
@@ -17,136 +17,140 @@
 				<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/logo/ohmyfood.png" alt="logo Ohmyfood">
 			</div>
 		</header>
-        <div class="imgfond">
-            <img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/le-delice-des-sens.jpg" alt="Plat du restaurant">
-        </div>
-		<section class="titre">
-            <div>
-                <h3>Le délice des sens</h3>
-                <div class="coeur">
-                    <i class="far fa-heart"></i> <!-- coeur vide --> 
+        <div class="corps">
+            <div class="imgfond">
+                <img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/le-delice-des-sens.jpg" alt="Plat du restaurant">
+            </div>
+            <div class="corpsmenu">
+                <section class="titre">
+                    <div>
+                        <h3>Le délice des sens</h3>
+                        <div class="coeur">
+                            <i class="far fa-heart"></i> <!-- coeur vide --> 
+                        </div>
+                    </div>
+                </section>
+                <section class="entrees">
+                    <h4>ENTRÉES</h4>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Tartare de thon</h5>
+                            <p>Assaisonné au yuzu</p>
+                        </div>
+                        <div class="prix">
+                            <p>25€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Bouchée de homard croustillant</h5>
+                            <p>Et sa farandole de petits légumes</p>
+                        </div>
+                        <div class="prix">
+                            <p>35€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Velouté de cèpes</h5>
+                            <p>Aux truffes</p>
+                        </div>
+                        <div class="prix">
+                            <p>20€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="plats">
+                    <h4>PLATS</h4>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Poulet rôti aux herbes de Provence</h5>
+                            <p>Et sa crème de truffe</p>
+                        </div>
+                        <div class="prix">
+                            <p>40€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Langouste rôtie</h5>
+                            <p>Et ses légumes de saison</p>
+                        </div>
+                        <div class="prix">
+                            <p>35€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Côte de boeuf Angus</h5>
+                            <p>Et sa purée de panais</p>
+                        </div>
+                        <div class="prix">
+                            <p>44€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="desserts">
+                    <h4>DESSERTS</h4>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Farandole de desserts</h5>
+                            <p>Du chef</p>
+                        </div>
+                        <div class="prix">
+                            <p>18€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Crème brulée</h5>
+                            <p>Revisité</p>
+                        </div>
+                        <div class="prix">
+                            <p>22€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu">
+                        <div class="txtmenu">
+                            <h5>Tiramisu</h5>
+                            <p>À la noisette</p>
+                        </div>
+                        <div class="prix">
+                            <p>23€</p>
+                            <div class="selection">
+                                <i class="fas fa-check-circle"></i>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <div class="button">
+                    <a href="#">Commander</a>
                 </div>
             </div>
-        </section>
-		<section class="entrees">
-            <h4>ENTRÉES</h4>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Tartare de thon</h5>
-                    <p>Assaisonné au yuzu</p>
-                </div>
-                <div class="prix">
-                    <p><strong>25€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Bouchée de homard croustillant</h5>
-                    <p>Et sa farandole de petits légumes</p>
-                </div>
-                <div class="prix">
-                    <p><strong>35€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Velouté de cèpes</h5>
-                    <p>Aux truffes</p>
-                </div>
-                <div class="prix">
-                    <p><strong>20€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-        </section>
-        <section class="plats">
-            <h4>PLATS</h4>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Poulet rôti aux herbes de Provence</h5>
-                    <p>Et sa crème de truffe</p>
-                </div>
-                <div class="prix">
-                    <p><strong>40€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Langouste rôtie</h5>
-                    <p>Et ses légumes de saison</p>
-                </div>
-                <div class="prix">
-                    <p><strong>35€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Côte de boeuf Angus</h5>
-                    <p>Et sa purée de panais</p>
-                </div>
-                <div class="prix">
-                    <p><strong>44€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-        </section>
-        <section class="desserts">
-            <h4>DESSERTS</h4>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Farandole de desserts</h5>
-                    <p>Du chef</p>
-                </div>
-                <div class="prix">
-                    <p><strong>18€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Crème brulée</h5>
-                    <p>Revisité</p>
-                </div>
-                <div class="prix">
-                    <p><strong>22€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-            <div class="menu">
-                <div class="txtmenu">
-                    <h5>Tiramisu</h5>
-                    <p>À la noisette</p>
-                </div>
-                <div class="prix">
-                    <p><strong>23€</strong></p>
-                </div>
-                <div class="selection">
-                    <i class="fas fa-check-circle"></i>
-                </div>
-            </div>
-        </section>
-        <div>
-            <button>Commander</button>
         </div>
 		<footer>
 			<div class="flogo">
