media querie et coeur

--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@
 							<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/la-palette-du-gout.jpg" alt="Plat du restaurant">
 							<p class="new">Nouveau</p>
 						</div>
-						<div class="blocrestotxt">
+						<div class="blocrestotxt blocrestotxt__new">
 							<div class="restotxt">
 								<h2>La palette du goût</h2>
 								<p>Ménilmontant</p>
 							</div>
 							<div class="coeur">
-								<i class="far fa-heart"></i> <!-- coeur vide --> 
+								<i class="far fa-heart heart"></i> <!-- coeur vide -->
+								<i class="fas fa-heart heart heart__plein"></i>
 							</div>
 						</div>
 					</a>
@@ -75,13 +76,14 @@
 							<img src="Maquettes-Ohmyfood/Maquettes-Ohmyfood/images/restaurants/la-note-enchantee.jpg" alt="Plat du restaurant">
 							<p class="new">Nouveau</p>
 						</div>
-						<div class="blocrestotxt">
+						<div class="blocrestotxt blocrestotxt__new">
 							<div class="restotxt">
 								<h2>La note enchantée</h2>
 								<p>Charonne</p>
 							</div>
 							<div class="coeur">
-								<i class="far fa-heart"></i> <!-- coeur vide --> 
+								<i class="far fa-heart heart"></i> <!-- coeur vide -->
+								<i class="fas fa-heart heart heart__plein"></i>
 							</div>
 						</div>
 					</a>
@@ -95,7 +97,8 @@
 								<p>Cité Rouge</p>
 							</div>
 							<div class="coeur">
-								<i class="far fa-heart"></i> <!-- coeur vide --> 
+								<i class="far fa-heart heart"></i> <!-- coeur vide -->
+								<i class="fas fa-heart heart heart__plein"></i>
 							</div>
 						</div>
 					</a>
@@ -109,7 +112,8 @@
 								<p>Folie-Méricourt</p>
 							</div>
 							<div class="coeur">
-								<i class="far fa-heart"></i> <!-- coeur vide --> 
+								<i class="far fa-heart heart"></i> <!-- coeur vide -->
+								<i class="fas fa-heart heart heart__plein"></i>
 							</div>
 						</div>
 					</a>
