--- a/page-sens.html
+++ b/page-sens.html
@@ -26,7 +26,8 @@
                     <div>
                         <h3>Le délice des sens</h3>
                         <div class="coeur">
-                            <i class="far fa-heart"></i> <!-- coeur vide --> 
+                            <i class="far fa-heart heart"></i> <!-- coeur vide -->
+                            <i class="fas fa-heart heart heart__plein"></i>
                         </div>
                     </div>
                 </section>
